fixing some alignment

--- a/src/components/ProblemPanel.css
+++ b/src/components/ProblemPanel.css
@@ -17,7 +17,7 @@
   }
 
   .problem-panel {
-    height: 100%;
+    height: 50%;
     width: 100%;
     padding: 0 0.2em 0.2em 0.2em;
     transition: box-shadow 5s ease; /* Smooth transition for box-shadow */
